--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,8 +32,7 @@ add_executable(test
 FetchContent_Declare(
 	SFML
     GIT_REPOSITORY https://github.com/SFML/SFML.git
-    GIT_TAG 2.6.x
-)
+    GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
 
 target_link_libraries(test
@@ -43,4 +42,23 @@ target_link_libraries(test
 		sfml-window 
 		sfml-system
 
+)
+
+# --------------- Eigen ---------------
+FetchContent_Declare(
+	Eigen
+	GIT_REPOSITORY https://gitlab.com/libeigen/eigen.git
+	GIT_TAG master
+	GIT_SHALLOW TRUE
+	GIT_PROGRESS TRUE
+)
+
+set(EIGEN_BUILD_DOC OFF)
+set(BUILD_TESTING OFF)
+set(EIGEN_BUILD_PKGCONFIG OFF)
+
+FetchContent_MakeAvailable(Eigen)
+
+target_link_libraries(test
+		 Eigen3::Eigen
 )
