--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ include_directories(
 		"${CMAKE_CURRENT_LIST_DIR}/include" 
 		"${CMAKE_CURRENT_LIST_DIR}/include/world" 
 		"${CMAKE_CURRENT_LIST_DIR}/include/lib" 
+		"${CMAKE_CURRENT_LIST_DIR}/include/UI" 
 		"${CMAKE_CURRENT_LIST_DIR}/include/components" 
 		"${CMAKE_CURRENT_LIST_DIR}/include/entitys" 
 		"${CMAKE_CURRENT_LIST_DIR}/include/states")
